--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "",
   "type": "commonjs",
   "scripts": {
-    "go": "tsx main.ts"
+    "go": "tsx main.ts",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -19,9 +20,13 @@
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.0",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "inquirer": "^12.4.2",
+    "ora": "^8.2.0",
+    "prettier": "^3.5.3",
     "replace-in-file": "^8.3.0",
     "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1"
   }
 }
