--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,25 +4,19 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-
-    /* Linting */
+    "incremental": false,
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "esModuleInterop": true,
-
     "useUnknownInCatchVariables": true,
-
-    /* needs for tools/openapi/generated/*.ts */
     "baseUrl": ".",
     "paths": {
       "@/*": ["*"]
