--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ensuria/ftools",
+  "name": "@floatrx/tools",
   "description": "Frontend tools for better developer experience",
   "version": "0.0.0",
   "license": "ISC",
