--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.13.8",
     "chalk": "^5.4.1",
+    "dotenv": "^16.4.7",
     "eslint": "^9.22.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "fast-glob": "^3.3.3",
@@ -30,6 +31,6 @@
     "typescript-eslint": "^8.26.1"
   },
   "dependencies": {
-    "openai": "^4.89.0"
+    "openai": "^4.0.0"
   }
 }
