change the main command from "go" to "po" (because "po" is more convenient and faster)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "type": "commonjs",
   "scripts": {
-    "go": "tsx main.ts",
+    "po": "tsx main.ts",
     "prepare": "husky"
   },
   "devDependencies": {
